# binary-inspector

./: .gitignore  README.md  U_test_data  inspect.cc  inspect.hh  main.cc  meson.build  spec.org  test_data  test_data_wide  test_inspect.cc  u_test_data  write.cc
src/: inspect.cc  inspect.hh  main.cc  meson.build
test/: meson.build  test_data  test_data_wide  test_inspect.cc  write.cc
